Final Giphy app

--- a/index.html
+++ b/index.html
@@ -18,17 +18,9 @@
 
   <!--Link to javascript file-->
   <script type="text/javascript" src="assets/javascript/app.js"></script>
-  <!--<style type="text/css">
-     button,
-    div,
-    form,
-    input {
-      margin: 10px;
-    }
-  </style> -->
+ 
 </head>
-<!--LROvVF2eoeCLQzzJ7fxLdyblEINc4dSo
-https://api.giphy.com/v1/gifs/search?api_key=LROvVF2eoeCLQzzJ7fxLdyblEINc4dSo&q=rome&limit=10&offset=0&rating=G&lang=en-->
+
 <body>
 
   <div class="container">
@@ -37,13 +29,14 @@ https://api.giphy.com/v1/gifs/search?api_key=LROvVF2eoeCLQzzJ7fxLdyblEINc4dSo&q=
     <!-- Finished Buttons will get put into this div  -->
     <div id="buttons-view"></div>
 
+    <!--Form area for input section-->
     <form id="vacation-form">
       <label for="vacation-input">Add a location!</label>
       <input type="text" id="vacation-input">
       <br>
 
       <!-- Submit button to take in new request -->
-      <input id="add-spot" type="submit" value="Add a location!">
+      <input id="add-spot" type="submit" value="Submit location!">
     </form>
 
     <!-- Pictures will go into this section -->
